--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -8,8 +8,7 @@ nav{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding-bottom: 10px;
-    margin: 10px auto 70px;
-
+    margin: 10px auto 0;
     border-bottom: 5px solid $natural;
 
     .nav_title{
@@ -19,19 +18,11 @@ nav{
             text-decoration: none;
             font-size: 40px;
             font-weight: bold;
-            letter-spacing: 5px;
-            font-family: 'Jim Nightshade', cursive;
+            // font-family: 'Jim Nightshade', cursive;
             font-family: 'Kaushan Script', cursive;
+            letter-spacing: 5px;
             color: $natural;
         }
-        
-        // padding-top: 8px;
-
-        // font-size: 40px;
-        // font-weight: bold;
-        // letter-spacing: 5px;
-        // font-family: 'Jim Nightshade', cursive;
-        // font-family: 'Kaushan Script', cursive;
     }
 
     .nav_login_signup{
@@ -40,7 +31,6 @@ nav{
         align-items: center;
         gap: 20px;
         margin-right: 15px;
-
         font-size: 20px;
         font-weight: bold;
         cursor: pointer;
@@ -48,16 +38,16 @@ nav{
 
     .login{
         padding: 5px 0;
+
+        &:hover{
+            border-radius: 5px;
+            border: 2px solid $natural;
+        }
         
         a{
             padding: 5px 12px 5px 15px;
             text-decoration: none;
             color: $natural;
-        }
-
-        &:hover{
-            border-radius: 5px;
-            border: 2px solid $natural;
         }
     }
 
@@ -82,6 +72,4 @@ nav{
             }
         }
     }
-
-
 }
