01/19 - Add home page RWD、firebase init

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,8 +1,8 @@
-$natural: #ECE9DF;
+@value natural: #ECE9DF;
 
-footer{
+.footer{
     display: grid;
     justify-content: center;
     padding-bottom: 10px;
-    color: $natural;
+    color: natural;
 }
