--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,6 @@
-// @import url('https://fonts.googleapis.com/css2?family=Jim+Nightshade&family=Kanit:wght@300&family=Moon+Dance&family=Noto+Sans+TC&family=Rowdies:wght@300;700&display=swap');
+/* // @import url('https://fonts.googleapis.com/css2?family=Jim+Nightshade&family=Kanit:wght@300&family=Moon+Dance&family=Noto+Sans+TC&family=Rowdies:wght@300;700&display=swap'); */
 
 @import url('https://fonts.googleapis.com/css2?family=Jim+Nightshade&family=Kanit:wght@300&family=Kaushan+Script&family=Moon+Dance&family=Noto+Sans+TC&family=Rowdies:wght@300;700&display=swap');
-
-$light-green: #728d81;
-$deep-green: #587367;
-$natural: #ECE9DF;
-$translucent-black: rgba(0, 0, 0, 0.5);
 
 
 *{
@@ -16,5 +11,5 @@ $translucent-black: rgba(0, 0, 0, 0.5);
 }
 
 body{
-    background-color: $light-green;
+    background-color: #728d81;
 }
