--- a/src/pages/Signup/Signup.module.css
+++ b/src/pages/Signup/Signup.module.css
@@ -42,7 +42,7 @@
 }
 
 .signup p{
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .signup input{
@@ -52,10 +52,12 @@
     border: none;
     border-bottom: 1px solid gray;
     letter-spacing: 1.5px;
+    font-size: 18px;
+    color: translucent-black;
 }
 
 .signupButton{
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
     letter-spacing: 5px;
     width: 200px;
@@ -75,6 +77,11 @@
 .signupButton:hover{
     box-shadow: none;
     transform: translateY(3px);
+}
+
+.error{
+    color: rgb(225, 99, 155);
+    font-size: 18px;
 }
 
 .toLogin a{
