--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -73,6 +73,18 @@ nav{
     color: natural;
 }
 
+.logout{
+    padding: 5px 12px 5px 15px;
+    color: natural;
+    border-radius: 5px;
+    border: 2px solid natural;
+}
+
+.logout:hover{
+    background-color: natural;
+    color: light-green;
+}
+
 .loginMobile{
     display: flex;
     justify-content: flex-end;
@@ -82,9 +94,85 @@ nav{
     display: none;
 }
 
-.hamburger{
+.hamburger, .close{
     width: 50px;
     height: 50px;
+    position: relative;
+}
+
+.link{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 69px;
+    left: 0;
+    z-index: 2;
+    height: 100%;
+    color: natural;
+    font-size: 18px;
+    background-color: light-green;
+    animation: open .3s ease-in-out;
+
+    display: none;
+}
+
+@keyframes open {
+    0% {
+        right: -100vw;
+        opacity: 0;
+    }
+    25% {
+        opacity: 0.25;
+    }
+    50%{
+        opacity: 0.5;
+    }
+    75%{
+        opacity: 0.75;
+    }
+    100% {
+        right: -10px;
+        opacity: 1;
+    }
+}
+
+.loginSide{
+    border-bottom: 1px solid #ece9df6f;
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.loginSide a{
+    padding:15px 0 15px 15px;
+    color: natural;
+    text-decoration: none;
+}
+
+.signupSide{
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.signupSide a{
+    padding:15px 0 15px 15px;
+    color: natural;
+    text-decoration: none;
+}
+
+.memberSide{
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.memberSide a{
+    padding:15px 0 15px 15px;
+    color: natural;
+    text-decoration: none;
+}
+
+.logoutSide{
+    padding:15px 0 15px 15px;
+    cursor: pointer;
 }
 
 @media (max-width: 700px) {
@@ -106,5 +194,9 @@ nav{
 
     .loginMobile{
         display: flex;
+    }
+
+    .link{
+        display: block;
     }
 }
