--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -5,9 +5,9 @@
 @value translucent-black: rgba(0, 0, 0, 0.5);
 
 .main{
-    max-width: 900px;
+    /* max-width: 900px; */
     margin: auto;
-    padding: 60px 0 90px;
+    padding: 60px 0;
     margin-bottom: 25px;
     background-color: natural;
     color: rgba(0, 0, 0, 0.7);
