--- a/src/components/Show/Show.module.css
+++ b/src/components/Show/Show.module.css
@@ -37,6 +37,10 @@
     margin-bottom: 20px;
 }
 
+.textBox{
+    height: 300px;
+}
+
 .text{
     text-align: center;
     background-color: antiquewhite;
@@ -45,6 +49,22 @@
     border-radius: 5px;
     word-wrap:break-word;
     box-shadow: 0px 2px 6px #AAAAAA;
+}
+
+.link{
+    text-align: center;
+    background-color: antiquewhite;
+    padding: 10px 0px;
+    margin: 12px 15px;
+    border-radius: 5px;
+    word-wrap:break-word;
+    box-shadow: 0px 2px 6px #AAAAAA;
+}
+
+.link a{
+    text-decoration: none;
+    color: black;
+    padding: 8px 45px;
 }
 
 .footer{
