--- a/src/components/Text/Text.module.css
+++ b/src/components/Text/Text.module.css
@@ -69,8 +69,9 @@
     padding-left: 10px;
 }
 
-.edit input {
-    width: 90%;
+.textInput {
+    /* width: 90%; */
+    width: 54.75vw;
     height: 62px;
     padding: 0 15px 0 5px;
     background-color: #ECE9DF;
@@ -131,12 +132,74 @@
     border-radius: 5px;
 }
 
+.linkBox{
+    width: 80%;
+    height: 102px;
+    padding: 20px 0;
+    background-color: white;
+    box-shadow: 0px 4px 10px #AAAAAA;
+    border-radius: 10px;
+    display: flex;
+    gap: 10px;
+    justify-content:space-evenly;
+    align-items: center;
+    margin-bottom: 15px;
+
+    animation: appear .4s ease-in-out;
+}
+
+.linkValueAndEditPen{
+    align-items: center;
+    width: 80%;
+    height: 62px;
+    padding: 5px 10px;
+    font-size: 18px;
+    letter-spacing: 1px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.linkValueAndEditPen:hover{
+    background-color: #ECE9DF;
+}
+
+.titleInput{
+    width: 90%;
+    width: 27.4vw;
+    height: 31px;
+    padding: 0 15px 0 5px;
+    background-color: #ECE9DF;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    letter-spacing: 1px;
+    overflow:hidden;
+    border-bottom: 1px solid #fff;
+}
+
+.linkInput{
+    width: 90%;
+    width: 27.4vw;
+    height: 31px;
+    padding: 0 15px 0 5px;
+    background-color: #ECE9DF;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    letter-spacing: 1px;
+    overflow:hidden;
+}
+
 @media (max-width: 700px) {
     .edit{
         margin-left: 5px;
     }
 
-    .edit input {
-        width: 80%;
+    .textInput {
+        width: 64.679vw;
+    }
+
+    .titleInput, .linkInput{
+        width: 32.3vw;
     }
 }
