--- a/src/components/Text/Text.module.css
+++ b/src/components/Text/Text.module.css
@@ -2,10 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 90%;
 }
 
 .textBox{
     width: 80%;
+    width: 47vw;
     height: 102px;
     padding: 20px 0;
     background-color: white;
@@ -70,7 +72,6 @@
 }
 
 .textInput {
-    /* width: 90%; */
     width: 54.75vw;
     height: 62px;
     padding: 0 15px 0 5px;
@@ -133,7 +134,7 @@
 }
 
 .linkBox{
-    width: 80%;
+    width: 47vw;
     height: 102px;
     padding: 20px 0;
     background-color: white;
@@ -163,9 +164,19 @@
     background-color: #ECE9DF;
 }
 
+.linkEdit{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 80%;
+    background-color: #ECE9DF;
+    position: relative;
+    padding-left: 10px;
+}
+
 .titleInput{
-    width: 90%;
-    width: 27.4vw;
+    width: 80%;
+    /* width: 27.4vw; */
     height: 31px;
     padding: 0 15px 0 5px;
     background-color: #ECE9DF;
@@ -178,8 +189,7 @@
 }
 
 .linkInput{
-    width: 90%;
-    width: 27.4vw;
+    width: 80%;
     height: 31px;
     padding: 0 15px 0 5px;
     background-color: #ECE9DF;
@@ -191,15 +201,8 @@
 }
 
 @media (max-width: 700px) {
-    .edit{
-        margin-left: 5px;
-    }
-
-    .textInput {
-        width: 64.679vw;
-    }
-
-    .titleInput, .linkInput{
-        width: 32.3vw;
+    .textBox, .linkBox{
+        width: 100%;
+        gap: 0;
     }
 }
