--- a/src/components/Text/Text.module.css
+++ b/src/components/Text/Text.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     width: 90%;
+    width: 100%;
 }
 
 .textBox{
@@ -19,9 +20,9 @@
     align-items: center;
     margin-bottom: 15px;
 
-    animation: appear .4s ease-in-out;
+    /* animation: appear .4s ease-in-out; */
 }
-
+/* 
 @keyframes appear{
     0%{
         opacity: 0;
@@ -32,6 +33,12 @@
     100%{
         opacity: 1;
     }
+} */
+
+.drag{
+    width: 24px;
+    padding: inherit;
+    cursor: pointer;
 }
 
 .textValueAndEditPen{
@@ -50,7 +57,8 @@
 }
 
 .textValue{
-    width: 50vw;
+    /* width: 50vw; */
+    width: 100%;
     margin-left: 5px;
     overflow:hidden;
     text-overflow: ellipsis;
@@ -72,7 +80,8 @@
 }
 
 .textInput {
-    width: 54.75vw;
+    /* width: 54.75vw; */
+    width: 100%;
     height: 62px;
     padding: 0 15px 0 5px;
     background-color: #ECE9DF;
@@ -115,6 +124,7 @@
 .displayToggleAndTrash{
     display: flex;
     flex-direction: column;
+    margin-right: 5px;
 }
 
 .displayToggleButton{
@@ -201,6 +211,10 @@
 }
 
 @media (max-width: 700px) {
+    .allText{
+        width: 90%;
+    }
+
     .textBox, .linkBox{
         width: 100%;
         gap: 0;
