--- a/src/pages/Admin/Admin.module.css
+++ b/src/pages/Admin/Admin.module.css
@@ -1,9 +1,24 @@
+.wrapper{
+    max-width: 1100px;
+    margin: auto;
+}
+
 .main{
     display: grid;
     grid-template-rows: minmax(600px, auto);
-    gap: 20px;
     margin: auto;
     background-color: #ECE9DF;
+}
+
+.layout{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.3);
+    position: fixed;
+    top: 0;
+    z-index: 8;
+
+    display: none;
 }
 
 .container{
@@ -15,7 +30,8 @@
 .left{
     display: grid;
     justify-items: center;
-    padding: 20px;
+    padding: 30px 0px;
+    margin-left: 20px;
 
     grid-template-rows: 100px auto;
 }
@@ -31,7 +47,7 @@
 .addTextButton, .addLinkButton{
     width: 22vw;
     padding: 10px 15px;
-    font-size: 26px; 
+    font-size: 20px; 
     font-weight: bold;
     border-radius: 50px;
     border: none;
@@ -45,7 +61,7 @@
 }
 
 .right{
-    margin: 95px 0;
+    margin: 95px 50px;
 }
 
 .showing{
@@ -58,38 +74,71 @@
     top: 150px;
 }
 
-
 .link{
     width: auto;
     background-color: gray;
 }
 
 .preview{
-    background-color: rgba(255, 255, 255, 0.645);
-    padding: 8px 10px;
-    text-align: center;
-    border-radius: 10px;
+    background-color: #ECE9DF;
+    padding: 12px;
+    cursor: pointer;
+    border-radius: 50%;
     box-shadow: 0px 2px 4px #AAAAAA;
-    
+
     position: fixed;
-    bottom: 10px;
-    right: 15px;
+    bottom: 30px;
+    right: 43vw;
+    z-index: 10;
 
     display: none;
 }
 
+.open{
+    background-color: #ECE9DF;
+    padding: 18px;
+    cursor: pointer;
+    border-radius: 30px;
+    box-shadow: 2px 4px 8px #AAAAAA;
 
+    position: fixed;
+    bottom: 10vw;
+    z-index: 10;
 
-@media (max-width: 1000px) {
-    .showing{
-        right: 7vw;
-    }
+    display: none;
 }
 
-@media (max-width: 850px) {
-    .showing{
-        right: 5vw;
-    }
+.smartphone{
+    width: 34px;
+    vertical-align: middle;
+}
+
+.mobileRight{
+    margin: 95px 50px;
+}
+
+.openMobileRight{
+    margin-bottom: 35px;
+}
+
+.close1{
+    width: 34px;
+    vertical-align: middle;
+    border-radius: 50%;
+    box-shadow: 2px 4px 4px #AAAAAA;
+    cursor: pointer;
+    position: absolute;
+    bottom: -50px;
+    left: 40%;
+}
+
+.openShowing{
+    width: 200px;
+    height: 400px;
+    background-color: rgba(255, 255, 255, 0.645);
+    border-radius: 30px;
+    border: 8px solid rgba(0, 0, 0, 0.697);
+    position: sticky;
 }
 
 @media (max-width: 700px) {
@@ -103,7 +152,7 @@
     }
 
     .addTextButton, .addLinkButton{
-        width: 80vw;
+        width: 90vw;
     }
     
     .edit{
@@ -112,14 +161,17 @@
 
     .left{
         grid-template-rows: 150px auto;
+        margin-left: 0px;
+        margin-bottom: 150px;
     }
 
     .right{
         display: none;
     }
 
-    .preview{
+    .preview, .open, .layout{
         display: block;
     }
 }
+
 
