--- a/src/components/Text/Text.module.css
+++ b/src/components/Text/Text.module.css
@@ -15,30 +15,17 @@
     box-shadow: 0px 4px 10px #AAAAAA;
     border-radius: 10px;
     display: flex;
-    gap: 10px;
-    justify-content:space-evenly;
+    justify-content: center;
     align-items: center;
+    margin-top: 30px;
     margin-bottom: 15px;
-
-    /* animation: appear .4s ease-in-out; */
 }
-/* 
-@keyframes appear{
-    0%{
-        opacity: 0;
-    }
-    50%{
-        opacity: 0.5;
-    }
-    100%{
-        opacity: 1;
-    }
-} */
+
 
 .drag{
     width: 24px;
     padding: inherit;
-    cursor: pointer;
+    cursor: grab;
 }
 
 .textValueAndEditPen{
@@ -61,7 +48,16 @@
     width: 100%;
     margin-left: 5px;
     overflow:hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+.textNoValue{
+    width: 100%;
+    margin-left: 5px;
+    overflow:hidden;
+    text-overflow: ellipsis;
+    color: gray;
 }
 
 .editPen{
@@ -80,10 +76,9 @@
 }
 
 .textInput {
-    /* width: 54.75vw; */
     width: 100%;
     height: 62px;
-    padding: 0 15px 0 5px;
+    padding: 0 45px 0 5px;
     background-color: #ECE9DF;
     border: none;
     border-radius: 5px;
@@ -125,12 +120,17 @@
     display: flex;
     flex-direction: column;
     margin-right: 5px;
+    margin-left: 1vw;
+    gap: 10px;
 }
 
 .displayToggleButton{
     width: 30px;
+    height: 20px;
     cursor: pointer;
     color: green;
+
+    transition: all .5s ease-in;
 }
 
 .trashButton{
@@ -151,8 +151,7 @@
     box-shadow: 0px 4px 10px #AAAAAA;
     border-radius: 10px;
     display: flex;
-    gap: 10px;
-    justify-content:space-evenly;
+    justify-content: center;
     align-items: center;
     margin-bottom: 15px;
 
@@ -186,7 +185,6 @@
 
 .titleInput{
     width: 80%;
-    /* width: 27.4vw; */
     height: 31px;
     padding: 0 15px 0 5px;
     background-color: #ECE9DF;
@@ -216,7 +214,7 @@
     }
 
     .textBox, .linkBox{
-        width: 100%;
+        width: 90vw;
         gap: 0;
     }
 }
