--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-/* // @import url('https://fonts.googleapis.com/css2?family=Jim+Nightshade&family=Kanit:wght@300&family=Moon+Dance&family=Noto+Sans+TC&family=Rowdies:wght@300;700&display=swap'); */
-
 @import url('https://fonts.googleapis.com/css2?family=Jim+Nightshade&family=Kanit:wght@300&family=Kaushan+Script&family=Moon+Dance&family=Noto+Sans+TC&family=Rowdies:wght@300;700&display=swap');
 
 
@@ -7,8 +5,6 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    /* font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -17,6 +13,6 @@ body{
 }
 
 .wrapper{
-    max-width: 1100px;
+    /* max-width: 1100px; */
     margin: auto;
 }
