--- a/src/pages/Admin/Admin.module.css
+++ b/src/pages/Admin/Admin.module.css
@@ -1,8 +1,3 @@
-.wrapper{
-    max-width: 1100px;
-    margin: auto;
-}
-
 .main{
     display: grid;
     grid-template-rows: minmax(600px, auto);
@@ -10,20 +5,9 @@
     background-color: #ECE9DF;
 }
 
-.layout{
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.3);
-    position: fixed;
-    top: 0;
-    z-index: 8;
-
-    display: none;
-}
-
 .container{
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 3fr 1.5fr;
     justify-items: center
 }
 
@@ -61,22 +45,7 @@
 }
 
 .right{
-    margin: 95px 50px;
-}
-
-.showing{
-    width: 200px;
-    height: 400px;
-    background-color: rgba(255, 255, 255, 0.645);
-    border-radius: 30px;
-    border: 8px solid rgba(0, 0, 0, 0.697);
-    position: sticky;
-    top: 150px;
-}
-
-.link{
-    width: auto;
-    background-color: gray;
+    margin: 95px 80px;
 }
 
 .preview{
@@ -89,21 +58,6 @@
     position: fixed;
     bottom: 30px;
     right: 43vw;
-    z-index: 10;
-
-    display: none;
-}
-
-.open{
-    background-color: #ECE9DF;
-    padding: 18px;
-    cursor: pointer;
-    border-radius: 30px;
-    box-shadow: 2px 4px 8px #AAAAAA;
-
-    position: fixed;
-    bottom: 10vw;
-    z-index: 10;
 
     display: none;
 }
@@ -111,34 +65,6 @@
 .smartphone{
     width: 34px;
     vertical-align: middle;
-}
-
-.mobileRight{
-    margin: 95px 50px;
-}
-
-.openMobileRight{
-    margin-bottom: 35px;
-}
-
-.close1{
-    width: 34px;
-    vertical-align: middle;
-    border-radius: 50%;
-    box-shadow: 2px 4px 4px #AAAAAA;
-    cursor: pointer;
-    position: absolute;
-    bottom: -50px;
-    left: 40%;
-}
-
-.openShowing{
-    width: 200px;
-    height: 400px;
-    background-color: rgba(255, 255, 255, 0.645);
-    border-radius: 30px;
-    border: 8px solid rgba(0, 0, 0, 0.697);
-    position: sticky;
 }
 
 @media (max-width: 700px) {
@@ -169,7 +95,7 @@
         display: none;
     }
 
-    .preview, .open, .layout{
+    .preview{
         display: block;
     }
 }
