--- a/src/pages/Publish/Publish.module.css
+++ b/src/pages/Publish/Publish.module.css
@@ -4,19 +4,15 @@
 
 .main{
     display: grid;
-    grid-auto-rows: 260px minmax(300px, auto) 100px;
+    grid-auto-rows: 230px minmax(300px, auto) 100px;
     justify-items: center;
     min-height: 100vh;
+    padding-top: 50px;
 }
 
 .userInfo{
-    width: 310px;
+    width: 90%;
     text-align: center;
-    margin: 50px 0 30px;
-    padding-bottom: 30px;
-    border-bottom: 5px dashed rgba(255, 255, 255, 0.609);
-    border-bottom: 3px dotted rgb(163, 159, 159);
-    /* border-bottom: 3px solid #728d81; */
 
     display: flex;
     flex-direction: column;
@@ -38,12 +34,12 @@
 }
 
 .userName{
-    font-weight: bold;
     font-size: 24px;
+    color: #333333;
 }
 
 .allList{
-    width: 300px;
+    width: 40vw;
     margin-bottom: 15px;
     text-align: center;
 
@@ -57,16 +53,17 @@
 }
 
 .text{
-    padding: 10px 0;
+    padding: 30px 5px 10px;
     font-weight: bold;
+    word-wrap: break-word;
 }
 
 .link{
     background-color: rgb(248, 247, 245);
-    border-radius: 5px;
+    border-radius: 20px;
     box-shadow: 0px 4px 10px #AAAAAA;
     cursor: pointer;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 
     transition: all 0.2s ease-in;
 }
@@ -74,7 +71,8 @@
 .link a{
     text-decoration: none;
     color: black;
-    min-height: 70px;
+    /* min-height: 70px; */
+    min-height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -98,4 +96,10 @@
     font-weight: bold;
     font-family: 'Kaushan Script', cursive;
     text-decoration: none;
+}
+
+@media (max-width: 700px) {
+    .allList{
+        width: 90vw;
+    }
 }
