--- a/src/pages/Admin/Admin.module.css
+++ b/src/pages/Admin/Admin.module.css
@@ -7,7 +7,7 @@
 
 .container{
     display: grid;
-    grid-template-columns: 3fr 1.5fr;
+    grid-template-columns: 3fr 2fr;
     justify-items: center
 }
 
@@ -18,6 +18,7 @@
     margin-left: 20px;
 
     grid-template-rows: 100px auto;
+    grid-template-rows: 150px auto;
 }
 
 .addButton{
@@ -26,6 +27,8 @@
     gap: 20px;
     margin-bottom: 30px;
     height: 53px;
+
+    flex-wrap: wrap;
 }
 
 .addTextButton, .addLinkButton{
@@ -86,7 +89,7 @@
     }
 
     .left{
-        grid-template-rows: 150px auto;
+        grid-template-rows: 280px auto;
         margin-left: 0px;
         margin-bottom: 150px;
     }
