--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -5,7 +5,7 @@
 
 nav{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 2fr 1.8fr;
     margin: auto;
     padding: 10px 3vw;
     border-bottom: 5px solid natural;
@@ -21,7 +21,7 @@ nav{
 
 .title a{
     text-decoration: none;
-    font-size: 40px;
+    font-size: 39px;
     font-weight: bold;
     font-family: 'Kaushan Script', cursive;
     letter-spacing: 5px;
@@ -34,7 +34,7 @@ nav{
     align-items: center;
     gap: 20px;
     margin-right: 15px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bold;
 }
 
@@ -76,17 +76,17 @@ nav{
 }
 
 .member a:hover{
+    padding-bottom: 10px;
     border-bottom: 5px solid deep-green;
-}
+} 
 
 .member a{
-    padding-bottom: 10px;
     text-decoration: none;
     color: natural;
 }
 
 .logout{
-    padding: 5px 12px 5px 15px;
+    padding: 5px 12px;
     color: natural;
     border-radius: 5px;
     border: 2px solid natural;
@@ -102,7 +102,6 @@ nav{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-right: 15px;
     cursor: pointer;
     display: none;
 }
