--- a/src/components/Text/Text.module.css
+++ b/src/components/Text/Text.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     width: 90%;
     width: 100%;
+    margin-top: 30px;
 }
 
 .noData{
@@ -79,19 +80,20 @@
 .edit{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 80%;
     background-color: #ECE9DF;
     position: relative;
     padding-left: 10px;
+    height: 66px;
 }
 
 .textInput {
     width: 100%;
-    height: 62px;
+    height: 66px;
     padding: 0 45px 0 5px;
     background-color: #ECE9DF;
     border: none;
-    border-radius: 5px;
     outline: none;
     font-size: 18px;
     letter-spacing: 1px;
@@ -101,6 +103,8 @@
 .editButton{
     position: absolute;
     right: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .saveButton{
@@ -167,7 +171,7 @@
 .linkValueAndEditPen{
     align-items: center;
     width: 80%;
-    height: 62px;
+    height: 66px;
     padding: 5px 10px;
     font-size: 18px;
     letter-spacing: 1px;
@@ -182,11 +186,12 @@
 .linkEdit{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     width: 80%;
     background-color: #ECE9DF;
     position: relative;
     padding-left: 10px;
+    height: 66px;
 }
 
 .titleInput{
@@ -256,7 +261,7 @@
 .img{
     width: 100%;
     height: 20vw;
-    /* aspect-ratio: 4/3; */
+    aspect-ratio: 4/3;
     padding: 10px 0;
 }
 
@@ -288,7 +293,7 @@
 .imgEdit{
     width: 100%;
     height: 20vw;
-    /* aspect-ratio: 4/3; */
+    aspect-ratio: 4/3;
     padding: 10px 0;
 }
 
@@ -338,7 +343,12 @@
         gap: 0;
     }
 
+    .linkInput, .titleInput{
+        width: 75%;
+    }
+
     .imgValue, .img, .imgValueEdit, .imgEdit, .imgNoValue, .noImgValueEdit{
         height: 40vw;
+        width: 90%;
     }
 }
