--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@ body{
 }
 
 .wrapper{
-    /* max-width: 1100px; */
     margin: auto;
+}
+
+.active{
+    padding-bottom: 10px;
+    border-bottom: 5px solid #587367;
 }
