--- a/src/pages/Admin/Admin.module.css
+++ b/src/pages/Admin/Admin.module.css
@@ -18,7 +18,7 @@
     margin-left: 20px;
 
     grid-template-rows: 100px auto;
-    grid-template-rows: 150px auto;
+    grid-template-rows: 115px auto;
 }
 
 .addButton{
@@ -26,7 +26,7 @@
     justify-content: center;
     gap: 20px;
     margin-bottom: 30px;
-    height: 53px;
+    /* height: 53px; */
 
     flex-wrap: wrap;
 }
@@ -68,6 +68,12 @@
 .smartphone{
     width: 34px;
     vertical-align: middle;
+}
+
+.loading{
+    width: 9vw;
+    border-radius: 50%;
+    margin-top: 50px;
 }
 
 @media (max-width: 700px) {
