02/09 - fix: add box button

--- a/src/pages/Publish/Publish.module.css
+++ b/src/pages/Publish/Publish.module.css
@@ -2,6 +2,16 @@
     background-color:  #ECE9DF;
 }
 
+.loadingDiv{
+    height: 100vh;
+    text-align: center;
+    padding-top: 50px;
+}
+
+.loading{
+    width: 10vw;
+}
+
 .main{
     display: grid;
     grid-auto-rows: auto minmax(300px, auto) 100px;
