--- a/src/components/Text/Text.module.css
+++ b/src/components/Text/Text.module.css
@@ -10,7 +10,7 @@
 .noData{
     color: gray;
     font-size: 24px;
-    padding-top: 50px;
+    /* padding-top: 50px; */
     font-weight: bold;
     display: flex;
     gap: 10px;
