--- a/src/pages/Admin/Admin.module.css
+++ b/src/pages/Admin/Admin.module.css
@@ -14,37 +14,58 @@
 .left{
     display: grid;
     justify-items: center;
-    padding: 30px 0px;
+    padding: 10px 0px 30px;
     margin-left: 20px;
-
-    grid-template-rows: 100px auto;
-    grid-template-rows: 115px auto;
+    grid-template-rows: auto auto minmax(400px, auto) auto;
 }
 
 .addButton{
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    gap: 20px;
-    margin-bottom: 30px;
-    /* height: 53px; */
-
-    flex-wrap: wrap;
+    margin-bottom: 20px;
 }
 
-.addTextButton, .addLinkButton{
-    width: 22vw;
+.openAllButton{
+    width: 45vw;
     padding: 10px 15px;
     font-size: 20px; 
     font-weight: bold;
-    border-radius: 50px;
+    border-radius: 50px 50px 0 0 ;
     border: none;
     background-color: #587367;
     color: #ECE9DF;
     cursor: pointer;
 }
 
+.allButton{
+    width: 45vw;
+    padding: 30px 10px 20px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    border-radius: 0 0 50px 50px;
+    background-color: white;
+    box-shadow: 0px 4px 10px #aaaaaa;
+}
+
+.addTextButton{
+    width: 45%;
+    padding: 10px 15px;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 20px;
+    background-color: #ece9df;
+    color: #333333;
+    box-shadow: 0px 4px 4px #aaaaaa;
+}
+
 .addTextButton:hover{
-    background-color: #395347;
+    transform: translateY(3px);
 }
 
 .right{
@@ -82,12 +103,20 @@
     }
 
     .addButton{
-        flex-wrap: wrap;
-        margin-bottom: 100px;
+        width: 80vw;
     }
 
-    .addTextButton, .addLinkButton{
-        width: 90vw;
+    .openAllButton{
+        width: 80vw;
+    }
+
+    .allButton{
+        width: 80vw;
+    }
+
+    .addTextButton{
+        width: 30vw;
+        font-size: 16px;
     }
     
     .edit{
@@ -98,6 +127,12 @@
         grid-template-rows: 280px auto;
         margin-left: 0px;
         margin-bottom: 150px;
+
+        grid-template-rows: auto auto;
+    }
+
+    .allTex{
+        margin-top: 0px;
     }
 
     .right{
