--- a/src/pages/Member/Member.module.css
+++ b/src/pages/Member/Member.module.css
@@ -18,25 +18,32 @@
     box-shadow: 0px 4px 10px #aaaaaa;
 }
 
-.storeAndCancelButton{
+.storeAndGoHomeButton{
     display: flex;
     justify-content: space-between;
 }
 
-.cancelButton{
+.goHomeButton{
+    border-radius: 5px;
+    border: none;
+}
+
+.goHomeButton a{
     padding: 5px 8px;
     font-size: 18px;
     font-weight: bold;
-    border-radius: 5px;
-    border: none;
     color: #b2a7a7;
     background: none;
     cursor: pointer;
+    text-decoration: none;
 }
 
-.cancelButton:hover{
-    color: white;
+.goHomeButton:hover{
     background-color: #D9D9D9;
+}
+
+.goHomeButton a:hover{
+    color: white;
 }
 
 .storeButton{
@@ -136,7 +143,7 @@ form{
     width: 25vw;
 }
 
-label{
+.memberLabel{
     font-weight: bold;
     color: gray;
 }
