02/10 - feature: add line box function

--- a/src/components/Show/Show.module.css
+++ b/src/components/Show/Show.module.css
@@ -64,6 +64,7 @@
 .username{
     font-size: 20px;
     color: #333333;
+    font-weight: bold;
 }
 
 .introduction{
@@ -186,6 +187,18 @@
     width: 142px;
     margin: 10px 0;
     border-radius: 10px;
+}
+
+.lineBoxInner{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.line{
+    width: 100%;
+    border: 1px solid;
 }
 
 .footer{
