--- a/src/components/Text/Text.module.css
+++ b/src/components/Text/Text.module.css
@@ -230,6 +230,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 15px;
+    flex-wrap: wrap;
 }
 
 .imgValueAndEditPen:hover{
@@ -333,12 +334,41 @@
     padding: 5px 8px;
 }
 
+.picInfo{
+    color: gray;
+    margin-top: 15px;
+}
+
+.lineBox{
+    width: 47vw;
+    height: 80px;
+    background-color: white;
+    box-shadow: 0px 4px 10px #aaaaaa;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+
+.lineBoxInner{
+    width: 80%;
+    display: flex;
+    justify-content: center;
+}
+
+.line{
+    width: 75%;
+    border: 1px solid;
+}
+
 @media (max-width: 700px) {
     .allText{
         width: 90%;
     }
 
-    .textBox, .linkBox, .picBox{
+    .textBox, .linkBox, .picBox, .lineBox{
         width: 90vw;
         gap: 0;
     }
