02/10 - fix: Login、Signup page button

--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -63,7 +63,7 @@
     font-weight: bold;
     letter-spacing: 5px;
     width: 200px;
-    padding: 8px;
+    /* padding: 8px; */
     margin-top: 15px;
 
     background-color: light-green;
@@ -83,11 +83,13 @@
 
 .loginButton p{
     font-size: 18px;
+    padding: 6px 0px;
 }
 
 .loading{
     width: 20px;
     vertical-align: middle;
+    padding: 8px 0px;
 }
 
 .error{
