--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -1,8 +1,3 @@
-@value light-green: #728d81;
-@value deep-green: #587367;
-@value natural: #ECE9DF;
-@value translucent-black: rgba(0, 0, 0, 0.5);
-
 .main{
     max-width: 900px;
     margin: 70px auto 100px;
@@ -19,7 +14,7 @@
 }
 
 .slogan{
-    color: natural;
+    color: #ECE9DF;
     font-size: 37px;
     font-weight: bold;
     line-height: 75px;
@@ -33,16 +28,18 @@
     font-size: 26px;
     text-align: center;
     background-color: #587367;
+    background-color: #ECE9DF;
     cursor: pointer;
     border-radius: 20px;
-    border: 2px solid translucent-black;
-    box-shadow: 2px 3px 1px 0px translucent-black;
+    border: 2px solid rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 3px 1px 0px rgba(0, 0, 0, 0.5);
     transition: .2s all ease-in;
 }
 
 .button a{
     text-decoration: none;
-    color: natural;
+    color: #ECE9DF;
+    color: #587367;
     font-weight: bold;
 }
 
@@ -54,13 +51,6 @@
 .right{
     justify-self: center;
 }
-
-/* .iphone{
-    width: 230px;
-    height: 350px;
-    background-color: natural;
-    border-radius: 15px;  
-} */
 
 .demo{
     border-radius: 32px;
