--- a/src/components/Box/Box.module.css
+++ b/src/components/Box/Box.module.css
@@ -222,6 +222,7 @@
     width: 47vw;
     height: auto;
     padding: 20px 0;
+    padding: 20px 0 7px;;
     background-color: white;
     box-shadow: 0px 4px 10px #AAAAAA;
     border-radius: 10px;
@@ -336,6 +337,7 @@
 .picInfo{
     color: gray;
     margin-top: 15px;
+    margin-top: 8px;
 }
 
 .lineBox{
